welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:9: error: not found: value R
	if (message=R)
                    ^BDRBuggle:9: error: type mismatch;
 found   : Unit
 required: Boolean
	if (message=R)
                   ^BDRBuggle:12: error: not found: value L
else if (message=L)
                 ^BDRBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
else if (message=L)
                ^BDRBuggle:15: error: not found: value I
else if (message=I)
                 ^BDRBuggle:15: error: type mismatch;
 found   : Unit
 required: Boolean
else if (message=I)
                ^BDRBuggle:19: error: not found: value A
else if (message=A)
                 ^BDRBuggle:19: error: type mismatch;
 found   : Unit
 required: Boolean
else if (message=A)
                ^BDRBuggle:21: error: not found: value B
else if (message=B)
                 ^BDRBuggle:21: error: type mismatch;
 found   : Unit
 required: Boolean
else if (message=B)
                ^BDRBuggle:24: error: not found: value C
else if (message=C)
                 ^BDRBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
else if (message=C)
                ^BDRBuggle:28: error: not found: value Z
else if (message=Z)
                 ^BDRBuggle:28: error: type mismatch;
 found   : Unit
 required: Boolean
else if (message=Z)
                ^BDRBuggle:30: error: not found: value Y
else if (message=Y)
                 ^BDRBuggle:30: error: type mismatch;
 found   : Unit
 required: Boolean
else if (message=Y)
                ^BDRBuggle:33: error: not found: value X
else if (message=X)
                 ^BDRBuggle:33: error: type mismatch;
 found   : Unit
 required: Boolean
else if (message=X)
                ^